# mimedetector

./: README.md  README_IT.md  pyproject.toml
src/mimedetector/: __init__.py  core.py
src/mimedetector/i18n/: en.py  it.py
tests/: test_mimedetector.py
