[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimedetector"
version = "0.2.1"
authors = [
    { name = "woopygit", email = "woopygit@icloud.com" },
]
description = "A Python package for detecting MIME types of local files and URLs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/woopygit/mimedetector"
"Bug Tracker" = "https://github.com/woopygit/mimedetector/issues"